# easy-faas

./: README.md  pyproject.toml  requirements.txt
function-editor/: function_editor.py  package.json  svelte.config.js
function-editor/src/: app.html
function-generator/: code-injector.sh  main.py
function-generator/python-fastapi/: Dockerfile  README.md
preparation/: cr-template.yaml  crd.yaml  faas-operator.py  install.sh
