[tool.poetry]
name = "easy-faas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "easy_faas"}]

[tool.poetry.dependencies]
python = "3.9.12"
streamlit = "^1.15.2"
kopf = "^1.36.0"
kubernetes = "^25.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
